--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,18 +33,35 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-    navigator.serviceWorker
-      .register('./service-worker.js')
-      .then((registration) => {
-        console.log('Service Worker registered with scope:', registration.scope);
-      })
-      .catch((error) => {
-        console.error('Service Worker registration failed:', error);
+      // index.js 파일 또는 웹 애플리케이션의 진입점에서 다음 코드를 추가합니다.
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('./service-worker.js').then(registration => {
+    registration.addEventListener('updatefound', () => {
+      const installingWorker = registration.installing;
+
+      installingWorker.addEventListener('statechange', () => {
+        if (installingWorker.state === 'installed') {
+          if (navigator.serviceWorker.controller) {
+            // 새로운 서비스 워커가 설치되었지만 이전 서비스 워커와 충돌을 방지하려고 대기 중인 경우
+            const updateConfirm = window.confirm('새로운 업데이트가 있습니다. 적용하시겠습니까?');
+
+            if (updateConfirm) {
+              installingWorker.postMessage({ action: 'skipWaiting' });
+            }
+          } else {
+            // 서비스 워커가 처음 등록될 때
+            console.log('Service Worker registered with scope:', registration.scope);
+          }
+        }
       });
+    });
+  }).catch(error => {
+    console.error('Service Worker registration failed:', error);
   });
-      }
+}
+
+
+
     </script>
   </body>
 </html>
